# spool

./: .coderabbit.yaml  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  AUDIT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  biome.json  build.js  err.txt  eslint.config.js  out.txt  package-lock.json  package.json  projector-parallel-merge-plan.md  ralph-implementation-summary.md  release-please-config.json  test-patch-ralph-enhancement.md  test-strategy-ralph-enhancement.md  tsconfig.json  vitest.config.ts
.spool/: AGENTS.md  (+4 more)
spool-rs/: .gitignore  AGENTS.md  Cargo.toml  README.md  release-plz.toml
spool-rs/.claude/: session-start.sh
spool-rs/.claude/skills/spool-review/: SKILL.md
spool-rs/.claude/skills/spool-using-git-worktrees/: SKILL.md
spool-rs/.codex/prompts/: spool-proposal.md
spool-rs/.codex/skills/spool-workflow/: SKILL.md
spool-rs/.opencode/skills/spool-write-change-proposal/: SKILL.md
spool-rs/crates/spool-cli/: CHANGELOG.md  Cargo.toml  build.rs
spool-rs/crates/spool-cli/src/: cli.rs  cli_error.rs  diagnostics.rs  main.rs  runtime.rs  util.rs
spool-rs/crates/spool-cli/src/app/: archive.rs  common.rs  entrypoint.rs  help.rs  init.rs  instructions.rs  list.rs  mod.rs  ralph.rs  run.rs  show.rs  status.rs  templates.rs  update.rs  validate.rs
spool-rs/crates/spool-cli/src/commands/: completions.rs  config.rs  create.rs  help.rs  mod.rs  plan.rs  serve.rs  state.rs  stats.rs  tasks.rs  workflow.rs
spool-rs/crates/spool-cli/tests/: agent_instruction_bootstrap.rs  archive_smoke.rs  cli_smoke.rs  cli_snapshots.rs  help.rs  init_gitignore_session_json.rs  init_more.rs  instructions_more.rs  misc_more.rs  parity_artifact_workflow.rs  parity_basics.rs  parity_foundations.rs  parity_help_version.rs  parity_init_interactive_tree.rs  parity_init_update_tree.rs  parity_plan.rs  parity_ralph_loop.rs  parity_state.rs  parity_tasks.rs  parity_workflow.rs  ralph_smoke.rs  source_file_size.rs  stats.rs  tasks_more.rs  update_smoke.rs  user_guidance_injection.rs  validate_more.rs
spool-rs/crates/spool-cli/tests/snapshots/: cli_snapshots__spool_agent_help.snap  cli_snapshots__spool_agent_instruction_help.snap  cli_snapshots__spool_create_help.snap  cli_snapshots__spool_domain_help.snap  cli_snapshots__spool_help.snap  cli_snapshots__spool_help_all.snap  cli_snapshots__spool_help_subcommand_all.snap  cli_snapshots__spool_init_help.snap  cli_snapshots__spool_list_help.snap  cli_snapshots__spool_ralph_help.snap  cli_snapshots__spool_tasks_help.snap  cli_snapshots__spool_validate_help.snap  cli_snapshots__spool_version.snap  cli_snapshots__spool_workflow_help.snap  parity_basics__parity_list_modules_json.snap  parity_basics__parity_list_modules_json_subdir.snap  parity_help_version__parity_help.snap  parity_help_version__parity_version.snap  parity_ralph_loop__parity_ralph_stdout.snap
spool-rs/crates/spool-cli/tests/support/: mod.rs
spool-rs/crates/spool-common/: Cargo.toml
spool-rs/crates/spool-common/src/: fs.rs  lib.rs  match_.rs
spool-rs/crates/spool-common/src/id/: change_id.rs  error.rs
spool-rs/crates/spool-config/: Cargo.toml
spool-rs/crates/spool-config/src/: context.rs  lib.rs
spool-rs/crates/spool-config/src/config/: defaults.rs  mod.rs
spool-rs/crates/spool-config/src/output/: mod.rs
spool-rs/crates/spool-config/src/spool_dir/: mod.rs
spool-rs/crates/spool-core/: Cargo.toml
spool-rs/crates/spool-core/src/: archive.rs  discovery.rs  distribution.rs  io.rs  lib.rs  list.rs  match.rs  paths.rs  repo_index.rs
spool-rs/crates/spool-core/src/config/: mod.rs  schema.rs  types.rs
spool-rs/crates/spool-core/src/create/: mod.rs
spool-rs/crates/spool-core/src/docs_server/: mod.rs  site.rs
spool-rs/crates/spool-core/src/id/: change_id.rs  mod.rs  module_id.rs  spec_id.rs
spool-rs/crates/spool-core/src/installers/: markers.rs  mod.rs
spool-rs/crates/spool-core/src/output/: mod.rs
spool-rs/crates/spool-core/src/ralph/: duration.rs  mod.rs  prompt.rs  runner.rs  state.rs
spool-rs/crates/spool-core/src/show/: mod.rs
spool-rs/crates/spool-core/tests/: distribution.rs  io.rs  ralph.rs  repo_index.rs  repo_integrity.rs  show.rs  validate.rs
spool-rs/crates/spool-domain/: Cargo.toml
spool-rs/crates/spool-domain/src/: discovery.rs  lib.rs  state.rs  workflow.rs
spool-rs/crates/spool-domain/tests/: planning.rs  state.rs  tasks.rs  tasks_parsing.rs  tasks_update.rs  workflow.rs
spool-rs/crates/spool-fs/: Cargo.toml
spool-rs/crates/spool-fs/src/: lib.rs
spool-rs/crates/spool-harness/: Cargo.toml
spool-rs/crates/spool-harness/src/: lib.rs  opencode.rs  stub.rs  types.rs
spool-rs/crates/spool-harness/tests/: opencode.rs  stub.rs
spool-rs/crates/spool-logging/: Cargo.toml
spool-rs/crates/spool-logging/src/: lib.rs
spool-rs/crates/spool-models/: Cargo.toml
spool-rs/crates/spool-models/src/: agent.rs  cache.rs  client.rs  compare.rs  discovery.rs  lib.rs  registry.rs  rollback.rs  types.rs  update.rs
spool-rs/crates/spool-schemas/: Cargo.toml
spool-rs/crates/spool-schemas/src/: lib.rs  workflow.rs  workflow_plan.rs  workflow_state.rs
spool-rs/crates/spool-schemas/tests/: validation.rs  workflow_roundtrip.rs
spool-rs/crates/spool-templates/: AGENTS.md  Cargo.toml
spool-rs/crates/spool-templates/src/: agents.rs  instructions.rs  lib.rs
spool-rs/crates/spool-templates/tests/: template_markdown.rs  user_guidance_template.rs
spool-rs/crates/spool-test-support/: Cargo.toml
spool-rs/crates/spool-test-support/src/: lib.rs
spool-rs/crates/spool-web/: Cargo.toml
spool-rs/crates/spool-web/src/: api.rs  app.js  auth.rs  frontend.rs  index.html  lib.rs  main.rs  server.rs  terminal.rs
spool-rs/crates/spool-workflow/: Cargo.toml
spool-rs/crates/spool-workflow/src/: lib.rs  planning.rs  tasks.rs
spool-rs/crates/spool-workflow/tests/: planning.rs  state.rs  tasks.rs  tasks_parsing.rs  workflow.rs
spool-rs/scripts/: README.md  coverage.sh
spool-rs/tools/: check_max_lines.py  sync_versions.py  version_bump.py
(+1661 files in other folders)
