[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.20.4-local.20260123000000"
edition = "2024"
license = "MIT"
repository = "https://github.com/withakay/spool"

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strip-ansi-escapes = "0.2.1"
portable-pty = "0.9.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
include_dir = "0.7.4"

[workspace.dependencies.insta]
version = "1.42.0"
features = ["glob"]

[workspace.dependencies.assert_cmd]
version = "2.0.16"

[workspace.dependencies.predicates]
version = "3.1.3"

[workspace.dependencies.tempfile]
version = "3.15.0"
