[package]
name = "spool-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spool"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
spool-core = { path = "../spool-core" }
spool-fs = { path = "../spool-fs" }
spool-templates = { path = "../spool-templates" }
chrono = { workspace = true }
spool-workflow = { path = "../spool-workflow" }
spool-schemas = { path = "../spool-schemas" }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
spool-test-support = { path = "../spool-test-support" }
