[package]
name = "spool-cli"
version = "0.22.2"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spool"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
log = { workspace = true }
dialoguer = { workspace = true }
crossterm = { workspace = true }
indicatif = { workspace = true }
spool-core = { path = "../spool-core" }
spool-logging = { path = "../spool-logging" }
spool-fs = { path = "../spool-fs" }
spool-templates = { path = "../spool-templates" }
spool-web = { path = "../spool-web" }
chrono = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
spool-domain = { path = "../spool-domain" }
spool-schemas = { path = "../spool-schemas" }
spool-harness = { path = "../spool-harness" }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
spool-test-support = { path = "../spool-test-support" }
