[package]
name = "spool-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

spool-common = { path = "../spool-common" }

[dev-dependencies]
tempfile = { workspace = true }
