[package]
name = "spool-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
pulldown-cmark = { workspace = true }
spool-fs = { path = "../spool-fs" }
spool-templates = { path = "../spool-templates" }
spool-harness = { path = "../spool-harness" }

[dev-dependencies]
tempfile = { workspace = true }
