[package]
name = "spool-core"
version = "0.24.0-local.202602051036"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
pulldown-cmark = { workspace = true }
schemars = { workspace = true }
spool-common = { path = "../spool-common" }
spool-config = { path = "../spool-config" }
spool-domain = { path = "../spool-domain" }
spool-templates = { path = "../spool-templates" }
spool-harness = { path = "../spool-harness" }

[dev-dependencies]
tempfile = { workspace = true }
