[package]
name = "spool-domain"
version = "0.22.2-local.202602041928"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spool-schemas = { path = "../spool-schemas" }

chrono.workspace = true
miette.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
