[package]
name = "spool-logging"
version = "0.22.2-local.202602041928"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
spool-core = { path = "../spool-core" }
