[package]
name = "spool-models"
version = "0.22.3-local.202602050906"
edition = "2021"
description = "Model registry and agent management for Spool"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
