[package]
name = "spool-test-support"
version = "0.22.2-local.202602041928"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portable-pty = { workspace = true }
strip-ansi-escapes = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
