[package]
name = "spool-test-support"
version = "0.22.3-local.202602050906"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
portable-pty = { workspace = true }
strip-ansi-escapes = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
