[package]
name = "spool-web"
version = "0.22.3-local.202602050906"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spool-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "process"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
mime_guess = "2.0"
futures = "0.3"
portable-pty = { workspace = true }
sha2 = "0.10"
hex = "0.4"
gethostname = "0.5"
spool-templates = { path = "../spool-templates" }
